Fix for cut off radio buttons.

--- a/app/styles/_bootstrap-theme.scss
+++ b/app/styles/_bootstrap-theme.scss
@@ -442,3 +442,7 @@ fieldset[disabled] .btn-primary.active {
     -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(255, 255, 255, 0.1);
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(255, 255, 255, 0.1);
 }
+
+.radio input[type="radio"], .radio-inline input[type="radio"] {
+    margin-left: -18px;
+}
